--- a/ecclesia/musica/Canto.html
+++ b/ecclesia/musica/Canto.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../styles/style.css" />
-    <title>CLÁSICOS</title>
+    <title>LECTIO MATEO</title>
   </head>
   <body>
     <p id="alInicio" class="principio"></p>
     <header>
       <div class="container">
         <p class="logo">CRISTO SALVADOR</p>
-        <!-- ****************************************************** -->
+        <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <a href="#alInicio"
           ><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"
         /></a>
@@ -19,113 +19,81 @@
       </div>
     </header>
     <br /><br />
-    <!-- ****************************************************************** -->
-    <h1 class="init">CLÁSICAS</h1>
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <h1 class="init">Initium Canendi</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor, <br />
       ni aceptes como Amor lo que no proviene de la Verdad" <br />EDITH STEIN
     </h3>
 
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
     <section id="0">
       <hr />
       <h1></h1>
       <div>
         <ol>
-          <li class="li"><a href="#1">Mendelssohn Bartholdy, Jakob </a></li>
-          <li class="li"><a href="#2"></a></li>
-          <li class="li"><a href="#3"></a></li>
-          <li class="li"><a href="#4"></a></li>
-          <li class="li"><a href="#5"></a></li>
-          <li class="li"><a href="#6"></a></li>
-          <li class="li"><a href="#7"></a></li>
+          li.li+7>a[href="#$"]
         </ol>
       </div>
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="1">
-      <h2 class="subtitulo">Mendelssohn</h2>
+      <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
-            <summary>Biografía</summary>
-            <p>
-              Felix Mendelssohn (Hamburgo, 3 de febrero de 1809-Leipzig, 4 de
-              noviembre de 1847), cuyo nombre completo era Jakob Ludwig Felix
-              Mendelssohn Bartholdy, fue un compositor, director de orquesta y
-              pianista alemán de música romántica, miembro de la misma familia
-              que la pianista y compositora Fanny Mendelssohn (su hermana) y el
-              filósofo Moses Mendelssohn. <br /><br />
-              Educado en la fe judía, más tarde se convirtió al luteranismo y
-              adoptó el apellido Mendelssohn-Bartholdy. En su infancia fue
-              considerado un niño prodigio musical, pero sus padres no trataron
-              de sacar partido de sus habilidades. De hecho, su padre declinó la
-              oportunidad de que Felix siguiera una carrera musical hasta que
-              quedó claro que tenía la firme intención de dedicarse seriamente a
-              ella.1 <br /><br />
-
-              Las obras de Mendelssohn incluyen sinfonías, conciertos,
-              oratorios, oberturas, música incidental, música para piano, música
-              para órgano y música de cámara. También tuvo un importante papel
-              en el resurgimiento del interés en la obra de Johann Sebastian
-              Bach. Sus gustos musicales esencialmente conservadores lo
-              separaron de muchos de sus contemporáneos más aventurados, como
-              Franz Liszt, Richard Wagner o Hector Berlioz. Después de un largo
-              periodo de denigración debido al cambio de los gustos musicales y
-              el antisemitismo a finales del siglo XIX y comienzos del XX, su
-              originalidad creativa tiene un buen reconocimiento,​ ha sido
-              evaluada de nuevo y se ha convertido en uno de los compositores
-              más populares del periodo romántico.
-            </p>
-            <img
-              src="../media/musica/Felix Mendelssohn.png"
-              alt="Mendelssohn"
-              class="img"
-            />
+            <summary></summary>
+            <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
       </ol>
-      <!-- ////////////////////////////////// -->
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="2">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
@@ -136,46 +104,61 @@
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
       </ol>
       <!-- ////////////////////////////////// -->
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="3">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
@@ -186,53 +169,60 @@
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary>Metanoia</summary>
-            <p><br /><br /></p>
-          </details>
-        </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
       </ol>
       <!-- ////////////////////////////////// -->
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="4">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
@@ -243,46 +233,60 @@
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
       </ol>
       <!-- ////////////////////////////////// -->
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="5">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
@@ -293,46 +297,60 @@
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
       </ol>
       <!-- ////////////////////////////////// -->
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="6">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
@@ -343,46 +361,60 @@
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
       </ol>
       <!-- ////////////////////////////////// -->
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="7">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
@@ -393,45 +425,59 @@
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
-        <!-- ****************************** -->
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
       </ol>
       <!-- ////////////////////////////////// -->
     </section>
-    <!-- ****************************************************************** -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
   </body>
 </html>
