--- a/ecclesia/musica/solfeo.html
+++ b/ecclesia/musica/solfeo.html
@@ -21,7 +21,7 @@
         <a href="#alInicio"
           ><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"
         /></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="../../ecclesia/musica/index.html" class="nombre">INICIO </a>
       </div>
     </header>
     <br /><br />
@@ -45,6 +45,7 @@
             <a
               href="https://www.youtube.com/watch?v=eqkIA9DDWH8&list=PLTv__5l5504S4kH2fiJrtv074gz_Ngq3Q&index=1"
               class="exterior"
+              target="_blank"
               >LINK YouTube 34 temas</a
             >
           </li>
@@ -65,7 +66,9 @@
         <li>
           <details class="select">
             <summary>Clase 1</summary>
-            <a href="../../media/musica/solfeo/01 SOLFEO - CLASES1-2.pdf"
+            <a
+              href="../../media/musica/solfeo/01 SOLFEO - CLASES1-2.pdf"
+              target="_blank"
               >Ejercicios
             </a>
           </details>
@@ -74,7 +77,9 @@
         <li>
           <details class="select">
             <summary>Clase 2-3</summary>
-            <a href="../../media/musica/solfeo/CLASE 3.pdf">Ejercicios </a>
+            <a href="../../media/musica/solfeo/CLASE 3.pdf" target="_blank"
+              >Ejercicios
+            </a>
             <p><br /><br /></p>
           </details>
         </li>
@@ -82,14 +87,18 @@
         <li>
           <details class="select">
             <summary>Clase 4-5</summary>
-            <a href="../../media/musica/solfeo/SOLFEO 05.pdf">Ejercicios </a>
+            <a href="../../media/musica/solfeo/SOLFEO 05.pdf" target="_blank"
+              >Ejercicios
+            </a>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Clase 6-11</summary>
-            <a href="../../media/musica/solfeo/SOLFEO 6-11.pdf">Ejercicios</a>
+            <a href="../../media/musica/solfeo/SOLFEO 6-11.pdf" target="_blank"
+              >Ejercicios</a
+            >
             <p><br /><br /></p>
           </details>
         </li>
@@ -97,7 +106,7 @@
         <li>
           <details class="select">
             <summary>Clase 12-15</summary>
-            <a href="../../media/musica/solfeo/SOLFEO 12-15.pdf"
+            <a href="../../media/musica/solfeo/SOLFEO 12-15.pdf" target="_blank"
               >Ejercicio y Teoría</a
             >
             <p><br /><br /></p>
@@ -105,6 +114,37 @@
         </li>
         <!-- ****************************** -->
 
+        <li>
+          <details class="select">
+            <summary>Clase 16-20</summary>
+            <a href="../../media/musica/solfeo/SOLFEO 16-20.pdf" target="_blank"
+              >Ejercicios y Teoría
+            </a>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
