--- a/ecclesia/musica/index.html
+++ b/ecclesia/musica/index.html
@@ -1,190 +1,217 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../styles/style.css">
-  <title>FORMACIÓN</title>
-</head>
-<body>
-  <p id="alInicio" class="principio"></p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles/style.css" />
+    <title>FORMACIÓN</title>
+  </head>
+  <body>
+    <p id="alInicio" class="principio"></p>
     <header>
       <div class="container">
-        <p class="logo"> CRISTO SALVADOR</p>
+        <p class="logo">CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="#alInicio"
+          ><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"
+        /></a>
         <a href="../../indiceGeneral.html" class="nombre">INICIO </a>
       </div>
-    </header> <br><br>
+    </header>
+    <br /><br />
     <!-- *************************************************************************** -->
     <h1 class="init">MÚSICA</h1>
-  
-    <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor,<br> ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</h3>
+
+    <h3 class="cita">
+      "No aceptes como Verdad lo que no proviene del Amor,<br />
+      ni aceptes como Amor lo que no proviene de la Verdad" <br />EDITH STEIN
+    </h3>
 
     <section id="Formación">
-      <hr>
-      <h1> TEMAS</h1>
+      <hr />
+      <h1>TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="./partituras.html">LECTURA DE PARTITURAS</a></li>
+          <li class="li"><a href="./partituras.html">MUSESCORE</a></li>
           <li class="li"><a href="./solfeo.html">SOLFEO</a></li>
-          <li class="li"><a href="./clasicos.html">TEMAS: CLÁSICOS</a></li>
-          
+          <li class="li">
+            <a href="./clasicos.html">PARTITURAS DE TEMAS CLÁSICOS</a>
+          </li>
+          <li class="li"><a href="./Canto.html">VOCALIS</a></li>
         </ol>
       </div>
     </section>
     <!-- /////////////////////////////////////////////////////////////////////////////// -->
-  
 
-   <section>
-    <h2 class="subtitulo"></h2>
-   <!-- /////////////////////////////////////// -->
-   <ol>
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    <section>
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
       </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    </section>
+    <!-- ////////////////////////////////// -->
+    <section>
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
       </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-   
-  </ol>
-</section>
-<!-- ////////////////////////////////// -->
-   <section>
-    <h2 class="subtitulo"></h2>
-   <!-- /////////////////////////////////////// -->
-   <ol>
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-   
-  </ol>
-</section>
-<!-- ////////////////////////////////// -->
-
+    </section>
+    <!-- ////////////////////////////////// -->
   </body>
 </html>
