--- a/ecclesia/musica/solfeo.html
+++ b/ecclesia/musica/solfeo.html
@@ -147,7 +147,8 @@
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary></summary>
+            <summary>Summarium</summary>
+            <a href="../../media/musica/solfeo/SOLFEO.pdf">Summarium </a>
             <p><br /><br /></p>
           </details>
         </li>
