--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -248,7 +248,7 @@
         <li><details class="select">
           <summary>Metanoia</summary>
           <p>Dios toma la Iniciativa y nos da su Gracia, infunde el conocimiento de la misma, <br> y acompaña la Gracia con el Don (Gracia también), necesario para cumplir la Tarea</p>
-          <h4 class="cita">Summarium</h4>
+          <h4 class="cita">Summarium 250519</h4>
           <ol>
             <h4>Inceptum Domini</h4>
             <li class="lema">Es Dios quien toma la iniciativa. La tarea es reconocerla, discernirla y seguirla. </li>
