--- a/ecclesia/musica/Canto.html
+++ b/ecclesia/musica/Canto.html
@@ -33,7 +33,13 @@
       <h1></h1>
       <div>
         <ol>
-          li.li+7>a[href="#$"]
+          <li class="li"><a href="#1">Recomendaciones Generales</a></li>
+          <li class="li"><a href="#2"></a></li>
+          <li class="li"><a href="#3"></a></li>
+          <li class="li"><a href="#4"></a></li>
+          <li class="li"><a href="#5"></a></li>
+          <li class="li"><a href="#6"></a></li>
+          <li class="li"><a href="#7"></a></li>
         </ol>
       </div>
     </section>
@@ -44,28 +50,49 @@
       <ol>
         <li>
           <details class="select">
-            <summary></summary>
+            <summary>Recomendaciones</summary>
+            <ol>
+              <li>escuchar música</li>
+              <li>Cantar</li>
+              <li>Imitar tonos de voz [Altos, medios, bajos]</li>
+              <li>Aplicar lo que se aprende</li>
+            </ol>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
+            <summary>Introducción</summary>
+            <ol>
+              <li>La respiración</li>
+              <li>Uso de la garganta</li>
+              <li>Los resonadores</li>
+            </ol>
             <p><br /><br /></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
-            <p><br /><br /></p>
+            <summary>Respiración</summary>
+            <ol>
+              <li>Respiración diafragmática</li>
+              <li>Respiración costal</li>
+              <li>Respiración clavicular</li>
+            <p>Cuando se respira no se debe de mover los hombros<br />Cuando se canta no se debe de tomar mucho aire<br />El aire se toma en las pausas</p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
+            <summary>Ejercicios de Respiración</summary>
+            <ol>
+              <li>Inhalación profunda, retener 4 seg </li>
+              <li>Expulsar haciendo TSSSS con fuerza y parejo</li>
+              <li>Unas 3 veces</li>
+              <li>Ejercicio una vez a la semana máximo</li>
+            </ol>
             <p><br /><br /></p>
           </details>
         </li>
