--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -15,7 +15,7 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="./oracion.html" class="nombre">INICIO </a>
+        <a href="./index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
